--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -1413,12 +1413,8 @@
       },
       "historia2-h3": { pt: "Deus se revela", en: "God Reveals Himself" },
       "historia2-p": {
-        pt: "Em meio ao desespero, lembrei das palavras dos missionários e, pela primeira vez, orei a Deus pedindo ajuda. Assim que terminei, virei-me e vi vocês chegando com mantimentos!
-
-Deus conduz a missão, revela Seu amor e age quando nos entregamos inteiramente para servi-Lo…",
-        en: "In my despair, I remembered the missionaries' words and, for the first time, prayed to God for help. As soon as I finished, I turned and saw you arriving with supplies!
-
-God leads the mission, reveals His love, and acts when we surrender ourselves entirely to serve Him..."
+        pt: "Em meio ao desespero, lembrei das palavras dos missionários e, pela primeira vez, orei a Deus pedindo ajuda. Assim que terminei, virei-me e vi vocês chegando com mantimentos! – Deus conduz a missão, revela Seu amor e age quando nos entregamos inteiramente para servi-Lo…",
+        en: "In my despair, I remembered the missionaries' words and, for the first time, prayed to God for help. As soon as I finished, I turned and saw you arriving with supplies! – God leads the mission, reveals His love, and acts when we surrender ourselves entirely to serve Him..."
       },
 
       /* DEPOIMENTOS */
