--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -1408,8 +1408,8 @@
       "historias-impacto-h2": { pt: "Histórias de Impacto", en: "Stories of Impact" },
       "historia1-h3": { pt: "Conhecendo GoSalim", en: "Knowing GoSalim" },
       "historia1-p": {
-        pt: "Ao oferecer alimento a Salim, conhecemos sua vila, lar de refugiados birmaneses, e testemunhamos milagres providenciais...",
-        en: " By offering food to Salim, we discovered his village, home to Burmese refugees, and witnessed divine miracles..."
+        pt: "GoSalim, um catador de recicláveis, cruzou nosso caminho em um dia qualquer, e lhe oferecemos comida. No dia seguinte, ele nos procurou pedindo ajuda para sua vila. Ao atendê-lo, descobrimos uma comunidade de refugiados birmaneses e testemunhamos milagres incríveis da provisão de Deus, que Se revelou de maneira surpreendente…",
+        en: "GoSalim, a recyclable collector, crossed our path one ordinary day, and we offered him food. The next day, he came back asking for help for his village. By assisting him, we discovered a community of Burmese refugees and witnessed incredible miracles of God’s provision, revealing Himself in a remarkable way…"
       },
       "historia2-h3": { pt: "Deus se revela", en: "God Reveals Himself" },
       "historia2-p": {
