--- a/Carrossel/hannah - Copy.html
+++ b/Carrossel/hannah - Copy.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
@@ -218,18 +218,25 @@
       padding: 0 20px;
       margin: 0 auto;
     }
-    #hero .hero-text h1 {
-      font-family: 'Montserrat', sans-serif;
-      font-weight: 700;
-      margin-bottom: 15px;
-      font-size: 2rem;
-      color: #ffffff;
-    }
-    #hero .hero-text p {
-      margin-bottom: 20px;
-      font-size: 1.1rem;
-      color: #ffffff;
-    }
+   #hero .hero-text h1 {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  margin-bottom: 15px;
+  font-size: 2rem;
+  color: #ffffff;
+  background-color: rgba(0, 0, 0, 0.4); /* Fundo preto transparente */
+  padding: 20px;
+  border-radius: 10px;
+}
+
+#hero .hero-text p {
+  margin-bottom: 20px;
+  font-size: 1.1rem;
+  color: #ffffff;
+  background-color: rgba(0, 0, 0, 0.4); /* Fundo preto transparente */
+  padding: 10px 20px;
+  border-radius: 8px;
+}
     #hero .hero-text button {
       background-color: var(--primaria);
       color: var(--texto-claro);
@@ -395,31 +402,31 @@
       overflow: visible;
       max-width: 100%;
     }
-   #main-circle-content {
-  position: absolute;
-  width: 180px; /* Reduzi um pouco para evitar cortes */
-  height: 180px; /* Ajustado proporcionalmente */
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  border-radius: 50%;
-  background-color: transparent; /* Agora está transparente */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 18px;
-  color: #333;
-  text-align: center;
-  overflow: hidden;
-  box-shadow: none; /* Remove qualquer sombra branca */
-}
+    #main-circle-content {
+      position: absolute;
+      width: 180px; /* Reduzi um pouco para evitar cortes */
+      height: 180px; /* Ajustado proporcionalmente */
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      border-radius: 50%;
+      background-color: transparent; /* Agora está transparente */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 18px;
+      color: #333;
+      text-align: center;
+      overflow: hidden;
+      box-shadow: none; /* Remove qualquer sombra branca */
+    }
 
-#main-circle-content img {
-  width: 85%; /* Reduz um pouco para não ser cortado */
-  height: 85%;
-  object-fit: contain; /* Mantém o GIF visível sem cortes */
-  background-color: transparent !important; /* Garante que não haja fundo branco */
-}
+    #main-circle-content img {
+      width: 85%; /* Reduz um pouco para não ser cortado */
+      height: 85%;
+      object-fit: contain; /* Mantém o GIF visível sem cortes */
+      background-color: transparent !important; /* Garante que não haja fundo branco */
+    }
 
     #circle {
       position: absolute;
@@ -684,6 +691,35 @@
       margin-top: 8px;
     }
 
+    /* NOVA SEÇÃO PARCERIAS E APOIO */
+    #parcerias {
+      padding: 40px 20px;
+      background-color: #ffffff;
+      text-align: center;
+    }
+    #parcerias-h2 {
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 700;
+      color: var(--primaria);
+      margin-bottom: 20px;
+      font-size: 2rem;
+    }
+    .parcerias-container {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      gap: 20px;
+    }
+    .parcerias-container img {
+      max-width: 200px;
+      width: 100%;
+      height: auto;
+      border-radius: 8px;
+      object-fit: cover;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+
     /* RODAPÉ */
     footer {
       background-color: var(--primaria);
@@ -803,6 +839,18 @@
         flex-direction: column;
         align-items: center;
       }
+      #parcerias {
+        padding: 20px 10px;
+      }
+      #parcerias-h2 {
+        font-size: 1.6rem;
+      }
+      .parcerias-container {
+        gap: 10px;
+      }
+      .parcerias-container img {
+        max-width: 150px;
+      }
       footer {
         padding: 20px 10px 100px 10px; /* Mantém espaço extra no rodapé */
       }
@@ -861,11 +909,11 @@
       </ul>
     </nav>
 
-  <div class="cta-header">
-  <button id="nav-doar" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
-    Doe Agora
-  </button>
-</div>
+    <div class="cta-header">
+      <button id="nav-doar" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
+        Doe Agora
+      </button>
+    </div>
 
     <!-- NOVO SELETOR DE IDIOMA -->
     <div class="lang-switch">
@@ -882,10 +930,10 @@
     </div>
   </header>
 
- <!-- Botão flutuante (mobile) -->
-<button class="donate-float-mobile" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
-  Doe Agora
-</button>
+  <!-- Botão flutuante (mobile) -->
+  <button class="donate-float-mobile" onclick="window.location.href='https://hannahenglishcourse.vercel.app/Carrossel/doe.html'">
+    Doe Agora
+  </button>
 
   <!-- HERO -->
   <section id="hero">
@@ -1218,6 +1266,17 @@
     </div>
   </section>
 
+  <!-- NOVA SEÇÃO PARCERIAS E APOIO (ANTES DO RODAPÉ) -->
+  <section id="parcerias">
+    <h2 id="parcerias-h2">Parcerias e Apoio</h2>
+    <div class="parcerias-container">
+      <img src="imagens/apoio1.png" alt="Apoio 1">
+      <img src="imagens/apoio2.png" alt="Apoio 2">
+      <img src="imagens/apoio3.png" alt="Apoio 3">
+      <img src="imagens/apoio4.png" alt="Apoio 4">
+    </div>
+  </section>
+
   <!-- RODAPÉ -->
   <footer id="footer">
     <p id="footer-copy">© 2025 Fundação Hannah. Todos os direitos reservados.</p>
@@ -1347,15 +1406,15 @@
     
       /* HISTÓRIAS DE IMPACTO */
       "historias-impacto-h2": { pt: "Histórias de Impacto", en: "Stories of Impact" },
-      "historia1-h3": { pt: "Mai (nome fictício)", en: "Mai (fictional name)" },
+      "historia1-h3": { pt: "Conhecendo GoSalim", en: "Knowing GoSalim" },
       "historia1-p": {
-        pt: "Mai, uma jovem refugiada de Myanmar, chegou até nós após perder tudo na guerra. Com a bolsa escolar que oferecemos, ela não apenas voltou a estudar, mas também conheceu o amor de Deus. Hoje, Mai é líder em formação e um exemplo de superação.",
-        en: "Mai, a young refugee from Myanmar, came to us after losing everything in the war. With the school scholarship we provided, she not only returned to her studies but also experienced God's love. Today, Mai is a leader in training and an example of resilience."
+        pt: "GoSalim, um catador de recicláveis, cruzou nosso caminho em um dia qualquer, e lhe oferecemos comida. No dia seguinte, ele nos procurou pedindo ajuda para sua vila. Ao atendê-lo, descobrimos uma comunidade de refugiados birmaneses e testemunhamos milagres incríveis da provisão de Deus, que Se revelou de maneira surpreendente…",
+        en: "GoSalim, a recyclable collector, crossed our path one ordinary day, and we offered him food. The next day, he came back asking for help for his village. By assisting him, we discovered a community of Burmese refugees and witnessed incredible miracles of God’s provision, revealing Himself in a remarkable way…"
       },
-      "historia2-h3": { pt: "Arun", en: "Arun" },
+      "historia2-h3": { pt: "Deus se revela", en: "God Reveals Himself" },
       "historia2-p": {
-        pt: "Arun, de apenas 8 anos, frequentava o Learning Center com fome e dificuldades de aprendizado. Com nosso suporte, ele recebeu alimentação, educação de qualidade e cuidado espiritual. Hoje, Arun lê fluentemente e compartilha versículos bíblicos com sua família.",
-        en: "Arun, only 8 years old, used to attend the Learning Center hungry and struggling with his studies. With our support, he received nutritious meals, quality education, and spiritual care. Today, Arun reads fluently and shares Bible verses with his family."
+        pt: "Em meio ao desespero, lembrei das palavras dos missionários e, pela primeira vez, orei a Deus pedindo ajuda. Assim que terminei, virei-me e vi vocês chegando com mantimentos! – Deus conduz a missão, revela Seu amor e age quando nos entregamos inteiramente para servi-Lo…",
+        en: "In my despair, I remembered the missionaries' words and, for the first time, prayed to God for help. As soon as I finished, I turned and saw you arriving with supplies! – God leads the mission, reveals His love, and acts when we surrender ourselves entirely to serve Him..."
       },
 
       /* DEPOIMENTOS */
@@ -1370,6 +1429,12 @@
         en: "\"Volunteering here taught me that true wealth lies in serving others.\""
       },
       "depo2-footer": { pt: "– João, voluntário", en: "– João, volunteer" },
+
+      /* NOVA SEÇÃO PARCERIAS E APOIO */
+      "parcerias-h2": {
+        pt: "Parcerias e Apoio",
+        en: "Partnerships and Support"
+      },
 
       /* RODAPÉ */
       "footer-copy": {
