--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>  
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
@@ -218,25 +218,25 @@
       padding: 0 20px;
       margin: 0 auto;
     }
-   #hero .hero-text h1 {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 700;
-  margin-bottom: 15px;
-  font-size: 2rem;
-  color: #ffffff;
-  background-color: rgba(0, 0, 0, 0.4); /* Fundo preto transparente */
-  padding: 20px;
-  border-radius: 10px;
-}
+    #hero .hero-text h1 {
+      font-family: 'Montserrat', sans-serif;
+      font-weight: 700;
+      margin-bottom: 15px;
+      font-size: 2rem;
+      color: #ffffff;
+      background-color: rgba(0, 0, 0, 0.4); /* Fundo preto transparente */
+      padding: 20px;
+      border-radius: 10px;
+    }
 
-#hero .hero-text p {
-  margin-bottom: 20px;
-  font-size: 1.1rem;
-  color: #ffffff;
-  background-color: rgba(0, 0, 0, 0.4); /* Fundo preto transparente */
-  padding: 10px 20px;
-  border-radius: 8px;
-}
+    #hero .hero-text p {
+      margin-bottom: 20px;
+      font-size: 1.1rem;
+      color: #ffffff;
+      background-color: rgba(0, 0, 0, 0.4); /* Fundo preto transparente */
+      padding: 10px 20px;
+      border-radius: 8px;
+    }
     #hero .hero-text button {
       background-color: var(--primaria);
       color: var(--texto-claro);
@@ -1245,7 +1245,8 @@
       </div>
     </div>
     <div class="impacto-cta">
-      <a href="impacto.html">Conheça mais histórias</a>
+      <!-- BOTÃO "CONHEÇA MAIS HISTÓRIAS" COM ID PARA TRADUÇÃO E FUNÇÃO DE REDIRECIONAMENTO -->
+      <a id="historias-impacto-btn" href="#" onclick="goToImpactPage()"></a>
     </div>
   </section>
 
@@ -1450,6 +1451,12 @@
       "modal-learn-more": {
         pt: "Saiba Mais",
         en: "Learn More"
+      },
+
+      /* BOTÃO "CONHEÇA MAIS HISTÓRIAS" */
+      "historias-impacto-btn": {
+        pt: "Conheça mais histórias",
+        en: "Read more stories"
       }
     };
 
@@ -1663,6 +1670,12 @@
       document.getElementById('lang-pt').classList.remove('inactive');
       document.getElementById('lang-en').classList.add('inactive');
     });
+
+    // NOVA FUNÇÃO PARA O BOTÃO "CONHEÇA MAIS HISTÓRIAS"
+    function goToImpactPage() {
+      const lang = document.documentElement.getAttribute("lang") || "pt";
+      window.location.href = `https://hannahenglishcourse.vercel.app/Carrossel/impacto.html?lang=${lang}`;
+    }
   </script>
 </body>
 </html>
