--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -894,7 +894,7 @@
   <!-- CABEÇALHO -->
   <header>
     <div class="logo">
-      <img src="imagens/logo.png" alt="Logotipo Fundação Hannah" />
+      <img src="imagens/logo.gif" alt="Logotipo Fundação Hannah" />
     </div>
 
     <div class="menu-btn" onclick="toggleMenu()">☰</div>
