--- a/Carrossel/historia.html
+++ b/Carrossel/historia.html
@@ -363,7 +363,7 @@
 <!-- HEADER -->
 <header>
   <div class="logo">
-    <img src="imagens/logo.png" alt="Logotipo Fundação Hannah" />
+    <img src="imagens/logo.gif" alt="Logotipo Fundação Hannah" />
   </div>
 
   <div class="menu-btn" onclick="toggleMenu()">☰</div>
