--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -587,7 +587,7 @@
   <!-- CABEÇALHO -->
   <header>
     <div class="logo">
-      <img src="imagens/logo.png" alt="Logotipo Fundação Hannah" class="lang-pt" />
+      <img src="imagens/logo.gif" alt="Logotipo Fundação Hannah" class="lang-pt" />
       <img src="imagens/logo.png" alt="Hannah Foundation Logo" class="lang-en" />
     </div>
 
