--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -1280,13 +1280,13 @@
 
   <!-- RODAPÉ -->
   <footer id="footer">
-    <p id="footer-copy">© 2025 Fundação Hannah. Todos os direitos reservados.</p>
+    <p id="footer-copy">© 2025 Missão Hannah. Todos os direitos reservados.</p>
     <div class="social-media">
       <a href="https://facebook.com" target="_blank">Facebook</a> |
       <a href="https://instagram.com" target="_blank">Instagram</a> |
       <a href="https://youtube.com" target="_blank">YouTube</a>
     </div>
-    <p id="footer-info">Endereço: 106/18 moo 13 Piyaporn , Mae Sai District, Chiang Rai Province -Thailand - 57130 | E-mail: thailandhannahfoundation@gmail.com | WhatsApp: +66622634630</p>
+    <p id="footer-info">Endereço: Thailand | E-mail: magdalenoroquette@gmail.com | WhatsApp: +66622634630</p>
   </footer>
 
   <!-- SCRIPTS -->
@@ -1318,8 +1318,8 @@
     /* TRADUÇÕES (PT <-> EN) VIA DICIONÁRIO */
     const translations = {
       "page-title": {
-        pt: "Fundação Hannah",
-        en: "Hannah Foundation"
+        pt: "Missão Hannah",
+        en: "Hannah Mission"
       },
       /* MENU */
       "nav-sobre-nos": { pt: "Sobre Nós", en: "About Us" },
@@ -1439,12 +1439,12 @@
 
       /* RODAPÉ */
       "footer-copy": {
-        pt: "© 2025 Fundação Hannah. Todos os direitos reservados.",
-        en: "© 2025 Hannah Foundation. All rights reserved."
+        pt: "© 2025 Missão Hannah. Todos os direitos reservados.",
+        en: "© 2025 Hannah Mission. All rights reserved."
       },
       "footer-info": {
-        pt: "Endereço: 106/18 moo 13 Piyaporn , Mae Sai District, Chiang Rai Province -Thailand - 57130 | E-mail: thailandhannahfoundation@gmail.com | WhatsApp: +66622634630",
-        en: "Address: 106/18 moo 13 Piyaporn , Mae Sai District, Chiang Rai Province -Thailand - 57130 | Email: thailandhannahfoundation@gmail.com | WhatsApp: +66622634630"
+        pt: "Endereço: Thailand  | E-mail: magdalenoroquette@gmail.com | WhatsApp: +66622634630",
+        en: "Address: Thailand | Email: magdalenoroquette@gmail.com | WhatsApp: +66622634630"
       },
 
       /* BOTÃO "SAIBA MAIS" NO MODAL */
