--- a/Carrossel/impacto.html
+++ b/Carrossel/impacto.html
@@ -486,13 +486,13 @@
 
   <!-- RODAPÉ (mesmo estilo) -->
   <footer>
-    <p>© 2025 Fundação Hannah. Todos os direitos reservados.</p>
+    <p>© 2025 Hannah Mission. All rights reserved.</p>
     <div class="social-media">
       <a href="https://facebook.com" target="_blank">Facebook</a> |
       <a href="https://instagram.com" target="_blank">Instagram</a> |
       <a href="https://youtube.com" target="_blank">YouTube</a>
     </div>
-    <p>Endereço: 106/18 moo 13 Piyaporn , Mae Sai District, Chiang Rai Province -Thailand - 57130 | E-mail: thailandhannahfoundation@gmail.com | WhatsApp: +66622634630</p>
+    <p>Endereço: Thailand | E-mail: magdalenoroquette@gmail.com | WhatsApp: +66622634630</p>
   </footer>
 
   <script>
