--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -838,8 +838,8 @@
   <!-- RODAPÉ -->
   <footer id="footer">
     <p>
-      <span class="lang-pt">© 2025 Fundação Hannah. Todos os direitos reservados.</span>
-      <span class="lang-en">© 2025 Hannah Foundation. All rights reserved.</span>
+      <span class="lang-pt">© 2025 Missão Hannah. Todos os direitos reservados.</span>
+      <span class="lang-en">© 2025 Hannah Mission. All rights reserved.</span>
     </p>
     <div class="social-media">
       <a href="https://facebook.com" target="_blank">Facebook</a> |
@@ -847,8 +847,8 @@
       <a href="https://youtube.com" target="_blank">YouTube</a>
     </div>
     <p>
-      <span class="lang-pt">Endereço: 106/18 moo 13 Piyaporn , Mae Sai District, Chiang Rai Province -Thailand - 57130 | E-mail: thailandhannahfoundation@gmail.com | WhatsApp: +66622634630</span>
-      <span class="lang-en">Address: 106/18 moo 13 Piyaporn , Mae Sai District, Chiang Rai Province -Thailand - 57130 | Email: thailandhannahfoundation@gmail.com | WhatsApp: +66622634630</span>
+      <span class="lang-pt">Endereço: Tailândia | E-mail: magdalenoroquette@gmail.com | WhatsApp: +66622634630</span>
+      <span class="lang-en">Address: Thailand | Email: magdalenoroquette@gmail.com | WhatsApp: +66622634630</span>
     </p>
   </footer>
 
