--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -1277,7 +1277,7 @@ With the emergency health fund, we seek not only to save lives but also to be a 
         carousel: [
           "imagens/saude/img1.png",
           "imagens/saude/img2.png",
-          "imagens/saude/img3.png"
+          "imagens/saude/img3.png",
           "imagens/saude/img4.png",
           "imagens/saude/img5.png",
           "imagens/saude/img6.png"
