--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -1031,7 +1031,9 @@ In addition to formal education, these children also attend our Learning Center 
         carousel: [
           "imagens/bolsa/img1.png",
           "imagens/bolsa/img2.png",
-          "imagens/bolsa/img3.png"
+          "imagens/bolsa/img3.png",
+          "imagens/bolsa/img4.png",
+          "imagens/bolsa/img5.png"
         ]
       },
       fazenda: {
