--- a/Carrossel/hannah.html
+++ b/Carrossel/hannah.html
@@ -1052,9 +1052,9 @@
           data-title="Blessing Table"
           data-title-pt="Mesa de Bênçãos"
           data-title-en="Blessing Table"
-          data-text="Fornecemos lanches durante a semana para os alunos e refeições completas aos sábados, atendendo necessidades físicas e emocionais."
-          data-text-pt="Fornecemos lanches durante a semana para os alunos e refeições completas aos sábados, atendendo necessidades físicas e emocionais."
-          data-text-en="We provide snacks during the week for students and full meals on Saturdays, meeting physical and emotional needs."
+          data-text="O Mesa de Bênçãos busca demonstrar o amor de Cristo, proporcionando sustento e esperança às famílias mais vulneráveis. Nosso objetivo é levar alívio físico e espiritual, suprindo a fome e compartilhando o Evangelho."
+          data-text-pt="O Mesa de Bênçãos busca demonstrar o amor de Cristo, proporcionando sustento e esperança às famílias mais vulneráveis. Nosso objetivo é levar alívio físico e espiritual, suprindo a fome e compartilhando o Evangelho."
+          data-text-en="Blessing Table seeks to demonstrate Christ’s love by providing sustenance and hope to the most vulnerable families. Our goal is to bring physical and spiritual relief, alleviating hunger and sharing the Gospel."
         >
           <img src="imagens/img2.png" alt="Blessing Table" />
         </div>
