--- a/Carrossel/doe.html
+++ b/Carrossel/doe.html
@@ -474,7 +474,7 @@
   <header>
     <div class="logo">
       <img src="imagens/logo.gif" alt="Logotipo Fundação Hannah" class="lang-pt" />
-      <img src="imagens/logo.png" alt="Hannah Foundation Logo" class="lang-en" />
+      <img src="imagens/logo.gif" alt="Hannah Foundation Logo" class="lang-en" />
     </div>
 
     <div class="menu-btn" onclick="toggleMenu()">☰</div>
