--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -587,8 +587,8 @@
   <!-- CABEÇALHO -->
   <header>
     <div class="logo">
-      <img src="imagens/logo.gif" alt="Logotipo Fundação Hannah" class="lang-pt" />
-      <img src="imagens/logo.png" alt="Hannah Foundation Logo" class="lang-en" />
+      <img src="imagens/logo.gif" alt="Logotipo Missão Hannah" class="lang-pt" />
+      <img src="imagens/logo.gif" alt="Hannah Mission Logo" class="lang-en" />
     </div>
 
     <div class="menu-btn" onclick="toggleMenu()">☰</div>
