--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -1338,7 +1338,19 @@ Nothing brings us more joy as missionaries than seeing a church we planted begin
         carousel: [
           "imagens/igreja/img1.png",
           "imagens/igreja/img2.png",
-          "imagens/igreja/img3.png"
+          "imagens/igreja/img3.png",
+          "imagens/igreja/img4.png",
+          "imagens/igreja/img5.png",
+          "imagens/igreja/img6.png",
+          "imagens/igreja/img7.png",
+          "imagens/igreja/img8.png",
+          "imagens/igreja/img9.png",
+          "imagens/igreja/img10.png",
+          "imagens/igreja/img11.png",
+          "imagens/igreja/img12.png",
+          "imagens/igreja/img13.png",
+          "imagens/igreja/img14.png",
+          "imagens/igreja/img15.png"
         ]
       }
     };
