--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -1182,7 +1182,14 @@ Food is essential for life, especially for those facing the horrors of war and e
         carousel: [
           "imagens/food/img1.png",
           "imagens/food/img2.png",
-          "imagens/food/img3.png"
+          "imagens/food/img3.png",
+          "imagens/food/img4.png",
+          "imagens/food/img5.png",
+          "imagens/food/img6.png",
+          "imagens/food/img7.png",
+          "imagens/food/img8.png",
+          "imagens/food/img9.png",
+          "imagens/food/img10.png"
         ]
       },
       his: {
