--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -1294,7 +1294,14 @@ With the emergency health fund, we seek not only to save lives but also to be a 
           "imagens/saude/img3.png",
           "imagens/saude/img4.png",
           "imagens/saude/img5.png",
-          "imagens/saude/img6.png"
+          "imagens/saude/img6.png",
+          "imagens/saude/img7.png",
+          "imagens/saude/img8.png",
+          "imagens/saude/img9.png",
+          "imagens/saude/img10.png",
+          "imagens/saude/img11.png",
+          "imagens/saude/img12.png",
+          "imagens/saude/img13.png"
         ]
       },
       igreja: {
