--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -984,7 +984,12 @@ Shiloh’s Home exists to welcome these mothers and children, offering them a sa
         carousel: [
           "imagens/abrigo/img1.png",
           "imagens/abrigo/img2.png",
-          "imagens/abrigo/img3.png"
+          "imagens/abrigo/img3.png",
+          "imagens/abrigo/img4.png",
+          "imagens/abrigo/img5.png",
+          "imagens/abrigo/img6.png",
+          "imagens/abrigo/img7.png",
+          "imagens/abrigo/img8.png"
         ]
       },
       bolsa: {
