--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -1249,7 +1249,27 @@ We are facing two major challenges:
         carousel: [
           "imagens/his/img1.png",
           "imagens/his/img2.png",
-          "imagens/his/img3.png"
+          "imagens/his/img3.png",
+          "imagens/his/img4.png",
+          "imagens/his/img5.png",
+          "imagens/his/img6.png",
+          "imagens/his/img7.png",
+          "imagens/his/img8.png",
+          "imagens/his/img9.png",
+          "imagens/his/img10.png",
+          "imagens/his/img11.png",
+          "imagens/his/img12.png",
+          "imagens/his/img13.png",
+          "imagens/his/img14.png",
+          "imagens/his/img15.png",
+          "imagens/his/img16.png",
+          "imagens/his/img17.png",
+          "imagens/his/img18.png",
+          "imagens/his/img19.png",
+          "imagens/his/img20.png",
+          "imagens/his/img21.png",
+          "imagens/his/img22.png",
+          "imagens/his/img23.png"        
         ]
       },
       saude: {
