--- a/Carrossel/projetos.html
+++ b/Carrossel/projetos.html
@@ -1090,7 +1090,23 @@ Unfortunately, due to the escalating war and the closure of Myanmar’s borders,
         carousel: [
           "imagens/fazenda/img1.png",
           "imagens/fazenda/img2.png",
-          "imagens/fazenda/img3.png"
+          "imagens/fazenda/img3.png",
+          "imagens/fazenda/img4.png",
+          "imagens/fazenda/img5.png",
+          "imagens/fazenda/img6.png",
+          "imagens/fazenda/img7.png",
+          "imagens/fazenda/img8.png",
+          "imagens/fazenda/img9.png",
+          "imagens/fazenda/img10.png",
+          "imagens/fazenda/img11.png",
+          "imagens/fazenda/img12.png",
+          "imagens/fazenda/img13.png",
+          "imagens/fazenda/img14.png",
+          "imagens/fazenda/img15.png",
+          "imagens/fazenda/img16.png",
+          "imagens/fazenda/img17.png",
+          "imagens/fazenda/img18.png",
+          "imagens/fazenda/img19.png"          
         ]
       },
       ingles: {
