--- a/Atividades/Grammar2/index.html
+++ b/Atividades/Grammar2/index.html
@@ -429,6 +429,8 @@ document.addEventListener('DOMContentLoaded', function () {
     loadTextFile();
     loadLessonContent();
     setupBackButton(); // Configura a lógica do botão Back
+    updateImagePath(); // Atualiza o caminho dinâmico da imagem
+    loadProfessorButtons();
 });
 
     function getLevelAndUnitFromURL() {
@@ -532,6 +534,8 @@ function getAuthenticatedUser() {
 
    function loadProfessorButtons() {
     const buttonContainer = document.querySelector('.button-container');
+    buttonContainer.innerHTML = ''; // Limpa o conteúdo do contêiner para evitar duplicação
+
     const maxProfessors = 10;
 
     // Obtém o level e unit da URL
@@ -548,7 +552,7 @@ function getAuthenticatedUser() {
             button.onclick = function() {
                 // Monta o caminho dinâmico para a aula do professor
                 const lessonPath = `../../${level}/${unit}/DataGrammar2/aulas/aula${i}/index.html`;
-                window.location.href = lessonPath;  // Navega para o caminho correto
+                window.location.href = lessonPath; // Navega para o caminho correto
             };
             buttonContainer.appendChild(button);
         };
@@ -561,9 +565,23 @@ function getAuthenticatedUser() {
     }
 }
 
-    document.addEventListener('DOMContentLoaded', function() {        
-        loadProfessorButtons();
-    });
+function updateImagePath() {
+    const { level, unit } = getLevelAndUnitFromURL();
+    const imagePath = `../../${level}/${unit}/DataGrammar2/image.png`; // Caminho dinâmico para a imagem
+
+    const mainImage = document.getElementById('main-image');
+    fetch(imagePath)
+        .then(response => {
+            if (!response.ok) {
+                throw new Error(`Erro ao carregar a imagem: ${response.statusText}`);
+            }
+            mainImage.src = imagePath; // Atualiza o atributo src da imagem
+        })
+        .catch(error => {
+            console.error('Erro ao carregar a imagem:', error);
+            mainImage.src = 'default-image.png'; // Caminho para uma imagem padrão em caso de erro
+        });
+}   
 </script>
 
 </body>
