--- a/Atividades/GrammarDialogoX/index.html
+++ b/Atividades/GrammarDialogoX/index.html
@@ -242,7 +242,7 @@ function loadTextFile() {
     console.log(`Reset totalAnswers para: ${totalAnswers}`);
 
     const { level, unit } = getLevelAndUnitFromURL();
-    const filePath = `../../${level}/${unit}/DataGrammar/texto.txt`;
+    const filePath = `../../${level}/${unit}/DataGrammarDialogo/texto.txt`;
 
     fetch(filePath)
         .then(response => {
@@ -366,7 +366,7 @@ function closeModal() {
 function loadLessonContent() {
     const { level, unit } = getLevelAndUnitFromURL();
     const currentPhase = getPhaseFromURL(); // Pega a fase da URL
-    const lessonPath = `../../${level}/${unit}/DataGrammar/aulas/aula${currentPhase}/lesson.txt`;
+    const lessonPath = `../../${level}/${unit}/DataGrammarDialogo/aulas/aula${currentPhase}/lesson.txt`;
     
     fetch(lessonPath)
         .then(response => {
@@ -551,7 +551,7 @@ function getAuthenticatedUser() {
             button.appendChild(img);
             button.onclick = function() {
                 // Monta o caminho dinâmico para a aula do professor
-                const lessonPath = `../../${level}/${unit}/DataGrammar/aulas/aula${i}/index.html`;
+                const lessonPath = `../../${level}/${unit}/DataGrammarDialogo/aulas/aula${i}/index.html`;
                 window.location.href = lessonPath; // Navega para o caminho correto
             };
             buttonContainer.appendChild(button);
@@ -567,7 +567,7 @@ function getAuthenticatedUser() {
 
 function updateImagePath() {
     const { level, unit } = getLevelAndUnitFromURL();
-    const imagePath = `../../${level}/${unit}/DataGrammar/image.png`; // Caminho dinâmico para a imagem
+    const imagePath = `../../${level}/${unit}/DataGrammarDialogo/image.png`; // Caminho dinâmico para a imagem
 
     const mainImage = document.getElementById('main-image');
     fetch(imagePath)
