--- a/Atividades/Grammar - Copy/index.html
+++ b/Atividades/Grammar - Copy/index.html
@@ -34,6 +34,7 @@
             transition: background-color 0.3s ease, box-shadow 0.3s ease;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
         }
+
         .check-btn:hover {
             background-color: #f0f0f0;
             box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.2);
@@ -58,14 +59,6 @@
             color: #333;
             font-size: 2rem;
             margin-top: 70px;
-        }
-        /* Classe adicionada para estilizar o título carregado do arquivo .txt */
-        .page-title {
-            font-size: 3rem;
-            font-weight: bold;
-            text-align: center;
-            color: #2c3e50;
-            margin-top: 20px;
         }
         h2 {
             background-color: #28a745;
@@ -214,11 +207,6 @@
 
 <div class="container">
     <a href="javascript:history.back()" class="back-button">Back</a>
-    <!--
-      Este h1 é o título carregado de "Title: ..." no texto.txt.
-      Mantivemos o id="title" para não quebrar o restante do código,
-      mas adicionamos a classe .page-title dinamicamente na função loadTextFile().
-    -->
     <h1 id="title">Loading title...</h1>
     
     <div class="image-container">
@@ -260,11 +248,10 @@
     let totalAnswers = 0;
     let clickedAnswers = 0;
     let isTextFileLoaded = false; // Variável para rastrear se já foi carregado
-
+    
     // ======================================================
     // ESTA É A FUNÇÃO QUE LÊ O ARQUIVO "texto.txt"
-    // E MOSTRA SEU CONTEÚDO NA PÁGINA, INCLUINDO TÍTULO,
-    // SEÇÕES, TABELAS, NEGRITO/ITÁLICO E CAMPOS DE RESPOSTA.
+    // E MOSTRA SEU CONTEÚDO NA PÁGINA.
     // ======================================================
     function loadTextFile() {
         if (isTextFileLoaded) {
@@ -297,16 +284,13 @@
                 let isHeaderRow = true;
 
                 lines.forEach(line => {
+                    // Remove quebras de linha extras (trim) caso queira evitar espaços
                     const trimmedLine = line.trim();
 
-                    // Verifica se é a linha de título principal (Title: ...)
                     if (trimmedLine.startsWith('Title: ')) {
-                        const pageTitle = trimmedLine.replace('Title: ', '');
-                        // Define o título no h1 e adiciona a classe de estilo
-                        document.getElementById('title').innerText = pageTitle;
-                        document.getElementById('title').classList.add('page-title');
-                    }
-                    // Seções definidas com "# "
+                        // Define o título na página
+                        document.getElementById('title').innerText = trimmedLine.replace('Title: ', '');
+                    } 
                     else if (trimmedLine.startsWith('# ')) {
                         // Fecha uma seção anterior, se houver
                         if (currentSection) {
@@ -315,28 +299,37 @@
                         currentSection = trimmedLine.replace('# ', '');
                         htmlContent += `<div class="section"><h2>${currentSection}</h2>`;
                     }
-                    // Detectando início de tabela (tablestart)
+                    // ===========================================================
+                    // DETECTANDO INÍCIO DE TABELA
+                    // ===========================================================
                     else if (trimmedLine.toLowerCase() === 'tablestart') {
                         inTable = true;
-                        isHeaderRow = true;
+                        isHeaderRow = true; 
                         htmlContent += '<table class="grammar-table">';
-                    }
-                    // Detectando fim de tabela (tableend)
+                    } 
+                    // ===========================================================
+                    // DETECTANDO FIM DE TABELA
+                    // ===========================================================
                     else if (trimmedLine.toLowerCase() === 'tableend') {
                         inTable = false;
                         htmlContent += '</tbody></table>';
                     }
-                    // Se estamos dentro de uma tabela, processa como linha de tabela
+                    // ===========================================================
+                    // SE ESTAMOS DENTRO DE UMA TABELA, TRATA COMO LINHA DA TABELA
+                    // ===========================================================
                     else if (inTable) {
                         const columns = trimmedLine.split('|');
                         if (isHeaderRow) {
+                            // Primeira linha após "TableStart" vira o cabeçalho
                             htmlContent += '<thead><tr>' + columns.map(col => `<th>${col.trim()}</th>`).join('') + '</tr></thead><tbody>';
                             isHeaderRow = false;
                         } else {
                             htmlContent += '<tr>' + columns.map(col => `<td>${col.trim()}</td>`).join('') + '</tr>';
                         }
                     }
-                    // Linhas com [Answer: ...] => cria campo de texto, botão "Check" e conta no totalAnswers
+                    // ===========================================================
+                    // LINHAS COM [Answer: ...] => CRIA CAMPO E BOTÃO "CHECK"
+                    // ===========================================================
                     else if (trimmedLine.includes('[Answer:')) {
                         const [question, answer] = trimmedLine.split('[Answer:');
                         const cleanedAnswer = answer.replace(']', '').trim();
@@ -352,15 +345,12 @@
                             </p>`;
                         totalAnswers++;
                         console.log(`Incrementando totalAnswers: ${totalAnswers}`);
-                    }
-                    // Qualquer outra linha simples => pode ter **negrito**, *itálico* ou ***ambos***
+                    } 
+                    // ===========================================================
+                    // QUALQUER OUTRA LINHA SIMPLES
+                    // ===========================================================
                     else {
-                        let formattedLine = trimmedLine
-                            .replace(/\*\*\*(.*?)\*\*\*/g, '<b><i>$1</i></b>') // Negrito + Itálico
-                            .replace(/\*\*(.*?)\*\*/g, '<b>$1</b>')         // Negrito
-                            .replace(/\*(.*?)\*/g, '<i>$1</i>');            // Itálico
-
-                        htmlContent += `<p>${formattedLine}</p>`;
+                        htmlContent += `<p>${trimmedLine}</p>`;
                     }
                 });
 
@@ -602,6 +592,7 @@
         });
     }
 
+    // Função para obter o usuário autenticado
     function getAuthenticatedUser() {
         return new Promise((resolve, reject) => {
             firebase.auth().onAuthStateChanged((user) => {
