--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -53,19 +53,27 @@
         .back-button:hover {
             background-color: #0056b3;
         }
-        h1 {
-            text-align: center;
-            color: #333;
-            font-size: 2rem;
-            margin-top: 70px;
-        }
-        /* Classe adicionada para estilizar o título carregado do arquivo .txt */
+        /* Ajuste do tamanho e estilo do título carregado do texto.txt */
         .page-title {
-            font-size: 3rem;
+            font-size: 2rem;
             font-weight: bold;
             text-align: center;
             color: #2c3e50;
             margin-top: 20px;
+        }
+        /* Estilo para subtítulo (##) */
+        .subtitle {
+            font-size: 1.3rem;
+            font-weight: bold;
+            text-transform: uppercase;
+            text-align: center;
+            margin: 10px 0;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+            font-size: 2rem;
+            margin-top: 70px; /* Mantido para não afetar outras partes, mas pode ajustar se quiser */
         }
         h2 {
             background-color: #28a745;
@@ -214,16 +222,14 @@
 
 <div class="container">
     <a href="javascript:history.back()" class="back-button">Back</a>
-    <!--
-      Este h1 é o título carregado de "Title: ..." no texto.txt.
-      Mantivemos o id="title" para não quebrar o restante do código,
-      mas adicionamos a classe .page-title dinamicamente na função loadTextFile().
-    -->
-    <h1 id="title">Loading title...</h1>
     
+    <!-- Imagem agora aparece antes do título -->
     <div class="image-container">
         <img id="main-image" src="image.png" alt="Example Image">
     </div>
+
+    <!-- Título do texto.txt será injetado aqui com a classe .page-title -->
+    <h1 id="title">Loading title...</h1>
 
     <div class="button-container">
         <!-- Botões dos professores serão carregados aqui -->
@@ -265,6 +271,7 @@
     // ESTA É A FUNÇÃO QUE LÊ O ARQUIVO "texto.txt"
     // E MOSTRA SEU CONTEÚDO NA PÁGINA, INCLUINDO TÍTULO,
     // SEÇÕES, TABELAS, NEGRITO/ITÁLICO E CAMPOS DE RESPOSTA.
+    // TAMBÉM RECONHECE "##" COMO SUBTÍTULO EM CAIXA ALTA.
     // ======================================================
     function loadTextFile() {
         if (isTextFileLoaded) {
@@ -305,6 +312,11 @@
                         // Define o título no h1 e adiciona a classe de estilo
                         document.getElementById('title').innerText = pageTitle;
                         document.getElementById('title').classList.add('page-title');
+                    }
+                    // Subtítulo reconhecido com "## "
+                    else if (trimmedLine.startsWith('## ')) {
+                        const subtitleText = trimmedLine.replace('## ', '').toUpperCase();
+                        htmlContent += `<h3 class="subtitle">${subtitleText}</h3>`;
                     }
                     // Seções definidas com "# "
                     else if (trimmedLine.startsWith('# ')) {
