--- a/Atividades/Grammar/index.html
+++ b/Atividades/Grammar/index.html
@@ -66,7 +66,7 @@
             font-size: 1.3rem;
             font-weight: bold;
             text-transform: uppercase;
-            text-align: center;
+            text-align: left; /* Agora alinhado à esquerda */
             margin: 10px 0;
         }
         h1 {
